--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -142,6 +142,10 @@
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="Statement.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="accounts.dat" />
+    <None Include="statements.dat" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
