--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -54,4 +54,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="accounts.dat">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="statements.dat">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
