--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{617035e5-3a2b-4632-bd8b-a47ee40cf022}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>atm</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -138,7 +139,6 @@
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="Manage.h" />
-    <ClInclude Include="VigenereCipher.h" />
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="Statement.h" />
   </ItemGroup>
